{
  "@@locale": "en_NZ",
  "appTitle": "Kite"
}
